refactor: Change streetAddress to street property
