# src/handlers/get-addresses.ts
@@ -12,7 +12,7 @@ export const setDocClient = (client: any) => {
 interface Address {
   userId: string;
   addressId: string;
-  streetAddress: string;
+  street: string;
   suburb: string;
   state: string;
   postcode: string;
